--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -5,8 +5,10 @@ on: [push]
 jobs:
   build:
     runs-on: ubuntu-latest
+
     steps:
-    - uses: actions/checkout@v2
+    - name: Checkout repository
+      uses: actions/checkout@v2
 
     - name: Set up Python
       uses: actions/setup-python@v2
@@ -16,9 +18,29 @@ jobs:
     - name: Install dependencies
       run: |
         sudo apt update
-        sudo apt install -y build-essential git zip unzip openjdk-17-jdk python3-pip
-        pip install cython
-        pip install buildozer
+        sudo apt install -y \
+          build-essential \
+          git \
+          zip \
+          unzip \
+          openjdk-17-jdk \
+          python3-pip \
+          libncurses5 \
+          libffi-dev \
+          libssl-dev \
+          libsqlite3-dev \
+          zlib1g-dev \
+          libjpeg-dev \
+          libandroid-tools
+
+        pip install --upgrade pip cython buildozer
+
+    - name: Initialize Buildozer (optional)
+      run: |
+        cd MyApp
+        if [ ! -f buildozer.spec ]; then
+          buildozer init
+        fi
 
     - name: Build APK
       run: |
