--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -17,8 +17,8 @@ jobs:
 
     - name: Install dependencies
       run: |
-        sudo apt update
-        sudo apt install -y \
+        sudo apt-get update || true
+        sudo DEBIAN_FRONTEND=noninteractive apt-get install -y \
           build-essential \
           git \
           zip \
