--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -15,24 +15,23 @@ jobs:
       with:
         python-version: '3.9'
 
-    - name: Install dependencies
+    - name: Run apt-get update
+      run: sudo apt-get update
+
+    - name: Install required packages
       run: |
-        sudo apt-get update || true
         sudo DEBIAN_FRONTEND=noninteractive apt-get install -y \
           build-essential \
           git \
           zip \
           unzip \
           openjdk-17-jdk \
-          python3-pip \
-          libncurses5 \
-          libffi-dev \
-          libssl-dev \
-          libsqlite3-dev \
-          zlib1g-dev \
-          libjpeg-dev
+          python3-pip
 
-        pip install --upgrade pip cython buildozer
+    - name: Install Python packages
+      run: |
+        pip install --upgrade pip
+        pip install cython buildozer
 
     - name: Build APK
       run: |
