--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -35,12 +35,10 @@ jobs:
         pip install --upgrade pip cython buildozer
 
     - name: Build APK
-      run: |
-        cd kivy-android-app
-        buildozer android debug
+      run: buildozer android debug
 
     - name: Upload APK
       uses: actions/upload-artifact@v4
       with:
         name: myapp-apk
-        path: kivy-android-app/bin/*.apk
+        path: bin/*.apk
