--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -7,7 +7,8 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v4
+    - name: Checkout code
+      uses: actions/checkout@v4
 
     - name: Set up Python
       uses: actions/setup-python@v4
@@ -16,38 +17,41 @@ jobs:
 
     - name: Install dependencies
       run: |
-        sudo apt-get update
-        sudo DEBIAN_FRONTEND=noninteractive apt-get install -y \
+        sudo apt update
+        sudo apt install -y \
           build-essential \
           git \
           zip \
           unzip \
           openjdk-17-jdk \
           python3-pip \
-          libncurses-dev \
+          libncurses5 \
+          libncurses5-dev \
           libffi-dev \
           libssl-dev \
           libsqlite3-dev \
           zlib1g-dev \
           libjpeg-dev
 
-        pip install --upgrade pip cython buildozer
+        pip install --upgrade pip
+        pip install cython buildozer
 
-    - name: Install Android SDK Command Line Tools
+    - name: Install Android SDK
       run: |
         export ANDROID_SDK_ROOT=$HOME/android-sdk
         mkdir -p $ANDROID_SDK_ROOT/cmdline-tools
         cd $ANDROID_SDK_ROOT/cmdline-tools
-        curl -o commandlinetools.zip https://dl.google.com/android/repository/commandlinetools-linux-9477386_latest.zip
-        unzip commandlinetools.zip
-        rm commandlinetools.zip
-        mv cmdline-tools latest
+        curl -O https://dl.google.com/android/repository/commandlinetools-linux-9477386_latest.zip
+        unzip commandlinetools-linux-9477386_latest.zip -d latest
+        rm commandlinetools-linux-9477386_latest.zip
 
-    - name: Install SDK packages
-      run: |
-        export ANDROID_SDK_ROOT=$HOME/android-sdk
+        # Accept licenses and install build tools
         yes | $ANDROID_SDK_ROOT/cmdline-tools/latest/bin/sdkmanager --sdk_root=$ANDROID_SDK_ROOT --licenses
-        $ANDROID_SDK_ROOT/cmdline-tools/latest/bin/sdkmanager --sdk_root=$ANDROID_SDK_ROOT "platform-tools" "platforms;android-31" "build-tools;31.0.0" "ndk;21.4.7075529"
+        $ANDROID_SDK_ROOT/cmdline-tools/latest/bin/sdkmanager --sdk_root=$ANDROID_SDK_ROOT \
+          "platform-tools" \
+          "platforms;android-31" \
+          "build-tools;31.0.0" \
+          "ndk;21.4.7075529"
 
     - name: Build APK
       run: |
