--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -15,17 +15,17 @@ jobs:
       with:
         python-version: '3.9'
 
-    - name: Install dependencies
+    - name: Install system dependencies
       run: |
-        sudo apt update
-        sudo apt install -y \
+        sudo apt-get update
+        sudo DEBIAN_FRONTEND=noninteractive apt-get install -y \
           build-essential \
           git \
           zip \
           unzip \
           openjdk-17-jdk \
           python3-pip \
-          libncurses5 \
+          libncurses-dev \
           libncurses5-dev \
           libffi-dev \
           libssl-dev \
@@ -45,7 +45,7 @@ jobs:
         unzip commandlinetools-linux-9477386_latest.zip -d latest
         rm commandlinetools-linux-9477386_latest.zip
 
-        # Accept licenses and install build tools
+        # Accept licenses & install build-tools
         yes | $ANDROID_SDK_ROOT/cmdline-tools/latest/bin/sdkmanager --sdk_root=$ANDROID_SDK_ROOT --licenses
         $ANDROID_SDK_ROOT/cmdline-tools/latest/bin/sdkmanager --sdk_root=$ANDROID_SDK_ROOT \
           "platform-tools" \
