--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -7,9 +7,9 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4  # Updated from v3 to v4
 
-    - uses: actions/setup-python@v4
+    - uses: actions/setup-python@v5  # Updated from v4 to v5
       with:
         python-version: '3.9'
 
@@ -56,7 +56,7 @@ jobs:
         buildozer android debug
 
     - name: Upload APK
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v4  # Updated from v3 to v4
       with:
         name: myapp-apk
         path: bin/*.apk
