--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -47,13 +47,20 @@ jobs:
         # Add Android tools to PATH
         echo "$HOME/android-sdk/cmdline-tools/latest/bin:$HOME/android-sdk/platform-tools" >> $GITHUB_PATH
 
+    - name: Verify buildozer.spec
+      run: |
+        if [ -f buildozer.spec ]; then
+          echo "buildozer.spec exists, skipping init"
+          cat buildozer.spec
+        else
+          buildozer init
+        fi
+
     - name: Build APK
       run: |
         export ANDROID_SDK_ROOT=$HOME/android-sdk
         export PATH=$ANDROID_SDK_ROOT/cmdline-tools/latest/bin:$ANDROID_SDK_ROOT/platform-tools:$PATH
         
-        # Initialize buildozer
-        buildozer init
         # Build the APK with debug output
         buildozer -v android debug
 
