--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -30,23 +30,19 @@ jobs:
         unzip commandlinetools-linux-9477386_latest.zip
         rm commandlinetools-linux-9477386_latest.zip
         
-        # The extracted files are in cmdline-tools directory
-        # Move them to cmdline-tools/latest/ as required by the new structure
-        mkdir -p latest
-        mv * latest/ || true  # Ignore errors if directory is empty
-        
-        # Verify sdkmanager exists
-        if [ -f "latest/bin/sdkmanager" ]; then
+        # The new structure has the tools in cmdline-tools/bin/
+        # Verify sdkmanager exists in the new location
+        if [ -f "bin/sdkmanager" ]; then
           echo "sdkmanager found successfully"
-          chmod +x latest/bin/sdkmanager
+          chmod +x bin/sdkmanager
         else
           echo "Error: sdkmanager not found!"
           ls -laR .
           exit 1
         fi
 
-        yes | latest/bin/sdkmanager --sdk_root=$ANDROID_SDK_ROOT --licenses
-        latest/bin/sdkmanager --sdk_root=$ANDROID_SDK_ROOT \
+        yes | bin/sdkmanager --sdk_root=$ANDROID_SDK_ROOT --licenses
+        bin/sdkmanager --sdk_root=$ANDROID_SDK_ROOT \
           "platform-tools" \
           "platforms;android-31" \
           "build-tools;31.0.0" \
@@ -57,18 +53,19 @@ jobs:
         # Create Buildozer's expected directory structure
         mkdir -p $HOME/.buildozer/android/platform/android-sdk
         
-        # Symlink components
-        ln -sfn $HOME/android-sdk/cmdline-tools/latest $HOME/.buildozer/android/platform/android-sdk/tools
+        # Symlink components to where Buildozer expects them
+        mkdir -p $HOME/.buildozer/android/platform/android-sdk/tools/bin
+        ln -sfn $HOME/android-sdk/cmdline-tools/bin/sdkmanager $HOME/.buildozer/android/platform/android-sdk/tools/bin/sdkmanager
         ln -sfn $HOME/android-sdk/platform-tools $HOME/.buildozer/android/platform/android-sdk/platform-tools
         ln -sfn $HOME/android-sdk/build-tools $HOME/.buildozer/android/platform/android-sdk/build-tools
         
         # Add to PATH
-        echo "$HOME/android-sdk/cmdline-tools/latest/bin:$HOME/android-sdk/platform-tools" >> $GITHUB_PATH
+        echo "$HOME/android-sdk/cmdline-tools/bin:$HOME/android-sdk/platform-tools" >> $GITHUB_PATH
 
     - name: Verify environment
       run: |
         echo "Checking sdkmanager..."
-        $HOME/android-sdk/cmdline-tools/latest/bin/sdkmanager --list
+        $HOME/android-sdk/cmdline-tools/bin/sdkmanager --list
         echo "Java version:"
         java -version
         echo "Buildozer version:"
@@ -77,7 +74,7 @@ jobs:
     - name: Build APK
       run: |
         export ANDROID_SDK_ROOT=$HOME/android-sdk
-        export PATH=$ANDROID_SDK_ROOT/cmdline-tools/latest/bin:$ANDROID_SDK_ROOT/platform-tools:$PATH
+        export PATH=$ANDROID_SDK_ROOT/cmdline-tools/bin:$ANDROID_SDK_ROOT/platform-tools:$PATH
         
         # Clean previous builds
         buildozer android clean
