--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -1,32 +1,86 @@
-name: Build APK
+name: Build BookstoreApp APK
 
 on: [push]
 
 jobs:
   build:
     runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v2
 
-    - name: Set up Python
-      uses: actions/setup-python@v2
+    steps:
+    - uses: actions/checkout@v4
+
+    - name: Set up Python 3.9
+      uses: actions/setup-python@v5
       with:
         python-version: '3.9'
 
-    - name: Install dependencies
+    - name: Install system dependencies
       run: |
-        sudo apt update
-        sudo apt install -y build-essential git zip unzip openjdk-17-jdk python3-pip
-        pip install cython
-        pip install buildozer
+        sudo apt-get update
+        sudo apt-get install -y build-essential zip unzip openjdk-17-jdk python3-pip \
+          libncurses-dev libffi-dev libssl-dev libsqlite3-dev zlib1g-dev libjpeg-dev
+        pip install --upgrade pip
+        pip install cython buildozer
+
+    - name: Install Android SDK
+      run: |
+        export ANDROID_SDK_ROOT=$HOME/android-sdk
+        mkdir -p $ANDROID_SDK_ROOT/cmdline-tools
+        cd $ANDROID_SDK_ROOT/cmdline-tools
+        wget https://dl.google.com/android/repository/commandlinetools-linux-9477386_latest.zip
+        unzip commandlinetools-linux-9477386_latest.zip
+        rm commandlinetools-linux-9477386_latest.zip
+        mv cmdline-tools latest
+        
+        # Verify sdkmanager exists
+        if [ -f "latest/bin/sdkmanager" ]; then
+          echo "sdkmanager found successfully"
+          chmod +x latest/bin/sdkmanager
+        else
+          echo "Error: sdkmanager not found!"
+          ls -laR .
+          exit 1
+        fi
+
+        yes | latest/bin/sdkmanager --sdk_root=$ANDROID_SDK_ROOT --licenses
+        latest/bin/sdkmanager --sdk_root=$ANDROID_SDK_ROOT \
+          "platform-tools" \
+          "platforms;android-31" \
+          "build-tools;31.0.0" \
+          "ndk;25.1.8937393"
+
+    - name: Set up Buildozer environment
+      run: |
+        # Create Buildozer's expected directory structure
+        mkdir -p $HOME/.buildozer/android/platform/android-sdk
+        
+        # Symlink components
+        ln -sfn $HOME/android-sdk/cmdline-tools/latest $HOME/.buildozer/android/platform/android-sdk/tools
+        ln -sfn $HOME/android-sdk/platform-tools $HOME/.buildozer/android/platform/android-sdk/platform-tools
+        ln -sfn $HOME/android-sdk/build-tools/31.0.0 $HOME/.buildozer/android/platform/android-sdk/build-tools
+        ln -sfn $HOME/android-sdk/ndk/25.1.8937393 $HOME/.buildozer/android/platform/android-ndk-r25b
+        
+        # Add to PATH
+        echo "$HOME/android-sdk/cmdline-tools/latest/bin:$HOME/android-sdk/platform-tools" >> $GITHUB_PATH
+
+    - name: Verify environment
+      run: |
+        echo "Checking environment..."
+        $HOME/android-sdk/cmdline-tools/latest/bin/sdkmanager --list
+        java -version
+        buildozer --version
 
     - name: Build APK
       run: |
-        cd BookstoreApp
-        buildozer android debug
+        export ANDROID_SDK_ROOT=$HOME/android-sdk
+        export PATH=$ANDROID_SDK_ROOT/cmdline-tools/latest/bin:$ANDROID_SDK_ROOT/platform-tools:$PATH
+        
+        # Build with verbose output
+        buildozer -v android debug
 
     - name: Upload APK
-      uses: actions/upload-artifact@v2
+      if: success()
+      uses: actions/upload-artifact@v4
       with:
         name: bookstoreapp-apk
-        path: BookstoreApp/bin/*.apk
+        path: bin/*.apk
