--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -22,6 +22,24 @@ jobs:
         pip install cython
         pip install buildozer
 
+        name: Test Upload Artifact
+
+on: [push]
+
+jobs:
+  test:
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Checkout repo
+      uses: actions/checkout@v2
+
+    - name: Upload README as artifact
+      uses: actions/upload-artifact@v3
+      with:
+        name: test-artifact
+        path: README.md
+
     - name: Build APK
       run: |
         cd BookstoreApp
