--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -8,10 +8,10 @@ jobs:
 
     steps:
     - name: Checkout repo
-      uses: actions/checkout@v2
+      uses: actions/checkout@v3
 
     - name: Set up Python
-      uses: actions/setup-python@v2
+      uses: actions/setup-python@v4
       with:
         python-version: '3.9'
 
@@ -27,7 +27,7 @@ jobs:
         buildozer android debug
 
     - name: Upload APK
-      uses: actions/upload-artifact@v2.3.1  # 👈 fix here!
+      uses: actions/upload-artifact@v3
       with:
         name: bookstoreapp-apk
         path: bin/*.apk
